--- a/armen-finance project/front-end/static/main.css
+++ b/armen-finance project/front-end/static/main.css
@@ -46,5 +46,6 @@ h3 {
     color: rgb(2, 0, 36);
     border-radius: 4px;
     position: relative;
-    top: 30px;
+    top: 10px;
+    margin: 4px;
 }
