--- a/armen-finance project/front-end/static/main.css
+++ b/armen-finance project/front-end/static/main.css
@@ -11,11 +11,6 @@ body {
     font-size: 13px;
 }
 
-html body {
-    height: 100%;
-    direction: ltr;
-}
-
 /* loginf page file styling  */
 h3 {
     color: #f5f5f5;
@@ -33,6 +28,7 @@ h3 {
 
 .card-body {
     padding-bottom: 35px;
+   
 }
 
 .login-logo {
@@ -48,4 +44,24 @@ h3 {
     position: relative;
     top: 10px;
     margin: 4px;
+}
+
+.footer-note {
+    position: relative;
+    top:30px;
+}
+
+button {
+    background: linear-gradient(117deg, rgba(2,0,36,1) 0%, rgba(8,169,255,0.9640231092436975) 51%, rgba(0,212,255,1) 100%);
+    color: #f5f5f5;
+    cursor: pointer;
+}
+
+button:hover {
+    background: rgb(2,0,36);
+    background: linear-gradient(241deg, rgba(2,0,36,1) 0%, rgba(8,169,255,0.9640231092436975) 51%, rgba(0,212,255,1) 100%);
+}
+
+a {
+    text-decoration: none !important;
 }
