--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -50,17 +50,31 @@
 /* banner */
 .home-banner {
     /* background-color: #0056A9; */
-    background: linear-gradient(71deg, rgba(0,169,166,1) 13%, rgba(0,86,169,1) 61%, rgba(0,3,169,1) 93%);
+    /* background: linear-gradient(71deg, rgba(0,169,166,1) 13%, rgba(0,86,169,1) 61%, rgba(0,3,169,1) 93%); */
+    background: url('../img/banner-wallpaper.jpg');
+    
     width: 100%;
     color: white;
     /* height: 300px; */
 }
 
 .home-login-bg {
-    background-color: #fff;
+    background-color: red;
     height: 400px;
     margin: 2rem 0;
     padding: 1.5rem;
+}
+
+.form-transparent{
+    margin-bottom: 1.3rem;
+}
+
+#login-home-button {
+    color: white;
+    font-size: 1.2rem;
+    font-weight: bold;
+    border: 2px solid white;
+    margin-top: 1.5rem;
 }
 
 /* create account banner */
