--- a/armenfinance/main/templates/main/index.html
+++ b/armenfinance/main/templates/main/index.html
@@ -85,7 +85,8 @@
     
                     <!-- icon -->
                     <div class="col-1">
-                        <span class="fas fa-bars" id="nav-menu-icon"></span>
+                        <span class="fas fa-bars" id="nav-menu-icon" onclick="openNav()"></span>
+
                     </div>
                     <!-- logo -->
                     <div class="col-5" id="logo-nav">
