--- a/frontend/static/css/main.css
+++ b/frontend/static/css/main.css
@@ -3,11 +3,7 @@
     padding: 0;
 }
 
-
 body {
-    background-color: #062489 !important;
-    background:url('/frontend/static/img/bg.png');
-    background-repeat: no-repeat center center fixed;
     color: #fff;
     font-size: 14px;
 }
@@ -77,6 +73,11 @@ a {
 /* registration  */
 .reg-page{
     padding: 14% 0;
+}
+
+/* policy  */
+.policy {
+    color: #343a40;
 }
 
 
