--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,55 +10,56 @@
         display: none;
     }
     /* home page styling */
-/* navigation */
-.navigation {
-    background: linear-gradient(to bottom,rgba(0,0,0,1) 0%,rgba(0,0,0,0.7) 50%,rgba(0,0,0,0) 100%);
-    padding: 1.3rem 0;
-    padding-top: 2.2rem;
-    /* height: 300px; */
-}
-.navigation-fixed {
-    background: linear-gradient(to bottom,rgba(0, 0, 139,1) 0%,rgba(0, 0, 139,0.9) 86%,rgba(0, 0, 139,0) 100%);
-    padding-bottom: 2rem;
-    /* background: rgb(0, 0, 139); */
-    width: 100%;
-    position: fixed;
-    z-index:10;
-    transition: 1s width ease-in-out ;
-}
+    /* navigation */
+    .navigation {
+        background: linear-gradient(to bottom,rgba(0,0,0,1) 0%,rgba(0,0,0,0.7) 50%,rgba(0,0,0,0) 100%);
+        padding: 1.3rem 0;
+        padding-top: 2.2rem;
+        /* height: 300px; */
+    }
+    .navigation-fixed {
+        background: linear-gradient(to bottom,rgba(0, 0, 139,1) 0%,rgba(0, 0, 139,0.9) 86%,rgba(0, 0, 139,0) 100%);
+        padding-bottom: 2rem;
+        /* background: rgb(0, 0, 139); */
+        width: 100%;
+        position: fixed;
+        z-index:10;
+        transition: 1s width ease-in-out ;
+    }
 
-#nav-menu-icon {
-    font-size: 1.5rem;
-    margin-top: 14%;
-}
-#open-account-nav {
-    margin-top: 0.6rem;
-}
-#open-account-nav > a {
-    color: white;
-}
+    #nav-menu-icon {
+        font-size: 1.5rem;
+        margin-top: 14%;
+    }
+    #open-account-nav {
+        margin-top: 0.6rem;
+    }
+    #open-account-nav > a {
+        color: white;
+    }
 
-#logo-nav > img {
-    width:50%;
-    height: auto;
-    margin-left:40%;
-}
+    #logo-nav > img {
+        width:50%;
+        height: auto;
+        margin-left:40%;
+    }
 
-#about-us-nav {
-    margin-top: 1%;
-    padding-left: 17%;
-}
-#about-us-nav > a {
-    color: white;
-    padding-right: 1.5rem;
-}
+    #about-us-nav {
+        margin-top: 1%;
+        padding-left: 17%;
+    }
+    #about-us-nav > a {
+        color: white;
+        padding-right: 1.5rem;
+    }
 
-/* banner */
-.home-banner {
+    /* banner */
+    .home-banner {
     /* background-color: #0056A9; */
     /* background: linear-gradient(71deg, rgba(0,169,166,1) 13%, rgba(0,86,169,1) 61%, rgba(0,3,169,1) 93%); */
     background: url('../img/banner-wallpaper.jpg');
-    
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100%;
     color: white;
     /* height: 300px; */
@@ -86,13 +87,17 @@
 /* create account banner */
 #create-account-banner > h3{
     margin-top: 5rem;
-    font-size: 3rem;
+    font-size: 1.9rem;
     font-weight: bold;
+    color: rgb(82, 59, 32);
+    text-shadow: 2px 4px rgba(232, 230, 230, 0.75);
 }
 #create-account-banner > p{
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     font-weight: 300;
     margin: 2rem 0;
+    color: rgb(82, 59, 32);
+    text-shadow: 2px 4px rgba(232, 230, 230, 0.75);
 }
 
 #create-account-banner > a {
@@ -103,13 +108,16 @@
     text-align: right;
 }
 #promotional-offer-banner > h3 {
-    margin-top: 8.4rem;
-    font-size: 2.9rem;
+    margin-top: 5.1rem;
+    font-size: 2.0rem;
     text-align: right;
+    color: rgb(82, 59, 32);
+    text-shadow: 2px 4px rgba(232, 230, 230, 0.75);
 }
 #promotional-offer-banner > span {
     font-size: 2.4rem;
-    /* text-align: right; */
+    color: rgb(82, 59, 32);
+    text-shadow: 2px 4px rgba(232, 230, 230, 0.75);
 }
 /* choose what's right for you  */
 .choose-wrfy-header {
@@ -236,7 +244,6 @@
     /* background: linear-gradient(71deg, rgba(0,169,166,1) 13%, rgba(0,86,169,1) 61%, rgba(0,3,169,1) 93%); */
     background: url('../img/banner-wallpaper-mobile.jpg') no-repeat;
     height: 100%;
-    
     width: 100%;
     color: white;
     /* height: 300px; */
