--- a/armenfinance/main/templates/main/activation-sent.html
+++ b/armenfinance/main/templates/main/activation-sent.html
@@ -9,14 +9,14 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     
     <!-- css -->
-    <link rel="stylesheet" href="./static/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6 mail-sent-container text-center">
-                <img src="./static/img/mail-sent.svg" alt="" class="mail-sent-img">
+                <img src="/static/img/mail-sent.svg" alt="" class="mail-sent-img">
                     <h3>HI!,Welcome To Armen Finance</h3>
                     <p>Please, Check your Email to Activate Your Account</p>
             </div>
