--- a/armenfinance/main/templates/main/index-2.html
+++ b/armenfinance/main/templates/main/index-2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Armen Finance</title>
 
-    <link rel="shortcut icon" href="/static/img/logo.png" type="image/x-icon">
+  
     <!-- jquery and popper cdn -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -22,7 +22,6 @@
 
     <!-- main css file -->
     <link rel="stylesheet" href="/static/css/style.css">
-    <link rel="stylesheet" href="/static/css/main.css">
 
     <!-- owl carousel -->
     <!-- css -->
@@ -51,7 +50,7 @@
                 </div>
                 <!-- open an account nav -->
                 <div class="col-2" id="open-account-nav">
-                    <a href="register.html" class="">Open an account <span class="pl-3 fas fa-chevron-down"></span></a>
+                    <a href="" class="">Open an account <span class="pl-3 fas fa-chevron-down"></span></a>
                 </div>
                 <!-- logo -->
                 <div class="col-5" id="logo-nav">
@@ -197,7 +196,32 @@
     </div>
     <!-- end of choose whats right for you section -->
 
-    <!--about manager -->
+    <!-- unlimited commission free trades -->
+    <!-- 
+        unltd-comm = unlimited commissions
+     -->
+    <div id="commission-free-trade-border">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6" id="start-0-investing">
+                    <img src="https://sites.chase.com/content/services/structured-image/image.copy.jpg/XCRT/Tile-Secondary/2020/August/61562-and-62405_IC20-1533-youinvest-rt.jpg" alt="">
+                </div>
+                <div class="col-md-6">
+                    <h3 id="unltd-comm-header">Unlimited Commission-Free Online Trades</h3>
+                    <p id="unltd-comm-body" class="my-5">Trade on your own: Open and fund an <strong>Armen Finance</strong> self-directed investment account.</p>
+                    <a href="" class="btn btn-primary">
+                        Open an Account
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end of unlimited commission free trades -->
+
+
+    <!-- new update -->
+
+       <!--about manager -->
        <div class="col-lg manager">
         <h3 class="text-center mb-5"><span class="text-primary">K</span>now More</h3>
         <div class="row">
@@ -244,6 +268,27 @@
         </div>
     </div>
     <!-- //about manager -->
+     <!-- unlimited commission free trades -->
+    <!-- 
+        unltd-comm = unlimited commissions
+     -->
+     <div id="commission-free-trade-border">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6" id="start-0-investing">
+                    <img src="https://sites.chase.com/content/services/structured-image/image.copy.jpg/XCRT/Tile-Secondary/2020/August/61562-and-62405_IC20-1533-youinvest-rt.jpg" alt="">
+                </div>
+                <div class="col-md-6">
+                    <h3 id="unltd-comm-header">Unlimited Commission-Free Online Trades</h3>
+                    <p id="unltd-comm-body" class="my-5">Trade on your own: Open and fund an <strong>Armen Finance</strong> self-directed investment account.</p>
+                    <a href="" class="btn btn-primary free-trade-btn">
+                        Open an Account
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end of unlimited commission free trades -->
     <!-- gallery -->
     <div class="col-lg gallery">
         <h3 class="text-center">
@@ -285,12 +330,12 @@
                 <p class="text-center testimonials-msg">Within the first few hours of signing up, I had doubled my yearly subscription. The information,
                      the team, and the entire community are always so helpful. I would consider this one of the best crypto communities in the entire space! </p>
             </div>
-            <div class="col-lg-3 testimonials_2">
+            <!-- <div class="col-lg-3 testimonials_2">
                 <img src="/static/img/new-te4.jpeg" alt="" width="45%" class="img-te4">
                 <p class="text-center img-te4-name">Samuel Archibong</p>
                 <p class="text-center testimonials-msg">I want to thank Armen-Finance for getting me setup to trade cryptocurrency. 
                     It’s an exciting time in the market and with only a week of hobby level trading I’ve been making $1000+ per day! Now is the time to invest.</p>
-            </div>
+            </div> -->
             <div class="col-lg-3 testimonials_3">
                 <img src="/static/img/te2.jpg" alt="" class="img-te2">
                 <p class="text-center img-te3-name">Linda Carl</p>
@@ -316,27 +361,6 @@
 </div>
 
 
-    <!-- unlimited commission free trades -->
-    <!-- 
-        unltd-comm = unlimited commissions
-     -->
-    <div id="commission-free-trade-border">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6" id="start-0-investing">
-                    <img src="https://sites.chase.com/content/services/structured-image/image.copy.jpg/XCRT/Tile-Secondary/2020/August/61562-and-62405_IC20-1533-youinvest-rt.jpg" alt="">
-                </div>
-                <div class="col-md-6">
-                    <h3 id="unltd-comm-header">Unlimited Commission-Free Online Trades</h3>
-                    <p id="unltd-comm-body" class="my-5">Trade on your own: Open and fund an <strong>Armen Finance</strong> self-directed investment account.</p>
-                    <a href="" class="btn btn-primary">
-                        Open an Account
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- end of unlimited commission free trades -->
 
     <!-- footer -->
     <footer id="footer-bg">
@@ -346,9 +370,9 @@
                 <div class="col-lg-4" id="footer-logo">
                     <!-- insert logo here -->
                     <img src="/static/img/logo_transparent.png" alt="">
+                    
                     <p>
-                        We are committed to being a driving force in the cryptocurrency trading revolution by increasing adoption of this innovative technology around the world. Using our streamlined trade listing process, we will advance new,
-                        innovative cryptocurrency projects that could potentially transform the way goods, services and operations are managed globally.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, culpa doloremque? Similique corrupti architecto iste ipsa soluta non numquam illum veritatis! Facilis nulla iusto molestias placeat officia qui vitae, itaque a magni perferendis quis sit nesciunt adipisci illum ad et?
                     </p>
                 </div>
 
