--- a/armenfinance/main/templates/main/dashboard.html
+++ b/armenfinance/main/templates/main/dashboard.html
@@ -33,23 +33,27 @@
 					<div class="col-lg-12 col-12">
 						<a class="box box-link-pop " href="javascript:void(0)">
 							<div class="box-body py-20 bg-success">
-								<h3 class="font-weight-600 mt-0">
+								<h4 class="font-weight-300">
 									Account Number
+								</h4>
+								<h3 class="font-weight-600 mt-0">
 									<br>
-									65222157855
+									{{ request.user.accountdetails.account_number }}
 								</h3>
 							</div>
 					   </a>			
 					  </div>
 					  <div class="col-12">
+						  {% include "main/messages/messages.html" %}
 						  
+					<!-- account balance information -->
 						<div class="box box-body">
 						  <h6>
 							<span class="text-uppercase">Total Account Balance</span>
 							<!-- <span class="float-right"><a class="btn btn-xs btn-primary" href="#">View</a></span> -->
 						  </h6>
 						  <br>
-						  <p class="font-size-26">$845,1258</p>
+						  <p class="font-size-26">$  {{ balance.amount }}</p>
 						</div>
 					</div>
 					
@@ -156,7 +160,7 @@
 						<div class="row">
 							  <!--Transfer  -->
 						  <div class="col-12 col-md-4">
-							  <a class="box box-link-shadow text-center" href="">
+							  <a class="box box-link-shadow text-center" href="{% url 'main:transfer-to-armen' %}">
 							  <div class="box-body py-25">
 								  <p class="mt-5"><i class="ti-exchange-vertical fa-4x"></i></p>
 								  <p class="font-weight-600">Transfer</p>
