--- a/armenfinance/main/templates/main/transfer-to-armen.html
+++ b/armenfinance/main/templates/main/transfer-to-armen.html
@@ -1,4 +1,5 @@
 ﻿{% extends "main/dashboard/dashboard-base.html" %}
+{% load widget_tweaks %}
 {% block body %}
 <div class="wrapper">
 
@@ -60,12 +61,15 @@
 									  <div class="col-md-6">
 										  <form action="" method="post">
 											  <div class="form-group">
+													{% include "main/messages/messages.html" %}
+												  {% csrf_token %}
   
 												  <!-- enter account number -->
 												  <label for="" class="my-4">
 													  Enter Destination Account
 												  </label>
-												  <input type="text" class="form-control" placeholder="Account Number" class="my-4">
+												  <!-- <input type="text" class="form-control" placeholder="Account Number" class="my-4"> -->
+												  {{ form.destination_account|add_class:"form-control"|attr:'placeholder:Account Number' }}
 												  <div class="form-control-feedback">
 													  <small>John Doe</small>
 												  </div>
@@ -74,15 +78,17 @@
 												  <label for="" class="my-4">
 													  Amount
 												  </label>
-												  <input type="number" class="form-control" placeholder="0.00" class="my-4">
+												  {{ form.amount|add_class:"form-control"|attr:'placeholder:0.00' }}
+												  <!-- <input type="number" class="form-control" placeholder="0.00" class="my-4"> -->
   
 												  <!-- Transaction Description -->
 												  <label for="" class="my-4">
 													  Transaction Description
 												  </label>
-												  <input type="text" class="form-control" placeholder="Transaction Description" class="my-4">
+												  {{ form.transfer_description|add_class:"form-control"|attr:'placeholder:Transaction Description' }}
+												  <!-- <input type="text" class="form-control" placeholder="Transaction Description" class="my-4"> -->
   
-												  <button class="btn btn-flat btn-warning btn-block  my-4">Continue</button>
+												  <button class="btn btn-flat btn-warning btn-block my-4" type="submit">Continue</button>
 											  </div>
 										  </form>
 									  </div>
