--- a/armenfinance/main/templates/main/dashboard/dashboard-sidebar.html
+++ b/armenfinance/main/templates/main/dashboard/dashboard-sidebar.html
@@ -8,7 +8,7 @@
             <div class="ulogo">
                  <a href="index.html">
                   <!-- logo for regular state and mobile devices -->
-                  <h3><b>Crypto</b>Admin</h3>
+                  <h3><b>Armen</b>Finance</h3>
                 </a>
             </div>
             <div class="profile-pic">
