--- a/armenfinance/main/templates/main/index.html
+++ b/armenfinance/main/templates/main/index.html
@@ -34,6 +34,8 @@
     <!-- custom script tag -->
     <script src="/static/js/main.js"></script>
 
+    {% load widget_tweaks %}
+
 </head>
 <body>
     
@@ -110,14 +112,15 @@
                 <!-- login form -->
                 <div class="col-lg-3 desktop">
                     <div class="home-login-bg">
-                        <form action="" >
-                            <!-- online id form -->
-                            <input type="text" class="form-control flat form-transparent" placeholder="Online ID">
-                            <!-- password form -->
-                            <input type="password" class="form-control flat form-transparent" placeholder="Input Password">
-
+                        <form action="{% url 'main:login' %}" method="POST">
+                            {% csrf_token %}
+                        <!-- {% comment %} online Id form  {% endcomment %} -->
+                            {{ form.online_id|add_class:'form-control flat form-transparent'|attr:'placeholder:online Id'}}
+                            {{ form.password|add_class:'form-control flat form-transparent'|attr:'placeholder:Password'}}
+                            
                             <input type="checkbox" > Save Online ID
-                            <a class="btn btn-outline-dark btn-block flat" id="login-home-button">LOGIN</a>
+                            <!-- <a class="btn btn-outline-dark btn-block flat" id="login-home-button">LOGIN</a> -->
+                            <button class="btn btn-outline-dark btn-block flat" id="login-home-button" type="submit">LOGIN</button>
                         </form>
                     </div>
                 </div>
