--- a/armenfinance/main/static/css/main.css
+++ b/armenfinance/main/static/css/main.css
@@ -1,26 +1,22 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-
 body {
-    
     background-repeat: no-repeat center center fixed;
     color: #343a40;
-    font-size: 14px;
+    /* font-size: 14px; */
     height: 100%;
-    font-family: monospace;
+    /* font-family: monospace; */
 }
 
+
 /* login page file styling  */
+
+
 /* h3 {
     color: #f5f5f5;
 } */
 
 #logo-column {
-    background: rgb(2,0,36);
-    background: linear-gradient(117deg, rgba(2,0,36,1) 0%, rgba(8,169,255,0.9640231092436975) 51%, rgba(0,212,255,1) 100%);
+    background: rgb(2, 0, 36);
+    background: linear-gradient(117deg, rgba(2, 0, 36, 1) 0%, rgba(8, 169, 255, 0.9640231092436975) 51%, rgba(0, 212, 255, 1) 100%);
 }
 
 #form-column {
@@ -30,7 +26,6 @@ body {
 
 .card-body {
     padding-bottom: 35px;
-   
 }
 
 .login-logo {
@@ -38,10 +33,13 @@ body {
     top: 110px;
 }
 
+
 /* Registration page file styling  */
+
 .registration-div {
     margin-bottom: 30px;
 }
+
 .registration-card {
     background-color: #f5f5f5;
     color: rgb(2, 0, 36);
@@ -53,39 +51,43 @@ body {
 
 .footer-note {
     position: relative;
-    top:30px;
+    top: 30px;
 }
 
-button {
-    background: linear-gradient(117deg, rgba(2,0,36,1) 0%, rgba(8,169,255,0.9640231092436975) 51%, rgba(0,212,255,1) 100%);
+/* button {
+    background: linear-gradient(117deg, rgba(2, 0, 36, 1) 0%, rgba(8, 169, 255, 0.9640231092436975) 51%, rgba(0, 212, 255, 1) 100%);
     color: #f5f5f5;
     cursor: pointer;
 }
 
 button:hover {
-    background: rgb(2,0,36);
-    background: linear-gradient(241deg, rgba(2,0,36,1) 0%, rgba(8,169,255,0.9640231092436975) 51%, rgba(0,212,255,1) 100%);
-}
+    background: rgb(2, 0, 36);
+    background: linear-gradient(241deg, rgba(2, 0, 36, 1) 0%, rgba(8, 169, 255, 0.9640231092436975) 51%, rgba(0, 212, 255, 1) 100%);
+} */
 
 a {
     text-decoration: none !important;
 }
 
+
 /* about section styling  */
+
 .about-armen {
     font-size: 20px;
     color: #343a40;
 }
 
-.about-img1, .about-img2, .about-img3 {
+.about-img1,
+.about-img2,
+.about-img3 {
     position: relative;
     opacity: 0.70;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-
     background-attachment: fixed;
 }
+
 .about-img1 {
     background-image: url(../img/pexels-pixabay-269077.jpg);
     height: 500px;
@@ -99,7 +101,6 @@ a {
 .about-img3 {
     background-image: url(../img/pexels-startup-stock-photos-7374.jpg);
     min-height: 400px;
-
 }
 
 .section {
@@ -126,7 +127,7 @@ a {
     text-transform: uppercase;
 }
 
- .border {
+.border {
     background-color: #111;
     color: #fff;
     padding: 20px;
@@ -137,7 +138,9 @@ a {
     color: #008080;
 }
 
+
 /* contact section styling  */
+
 .contact-img1 {
     background-image: url('../img/pexels-snapwire-618613.jpg');
     height: 600px;
@@ -153,13 +156,14 @@ a {
     min-height: 600px;
 }
 
-.contact-img1, .contact-img2, .contact-img3 {
+.contact-img1,
+.contact-img2,
+.contact-img3 {
     position: relative;
     opacity: 0.70;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-
     background-attachment: fixed;
 }
 
@@ -168,7 +172,9 @@ a {
     color: #111;
 }
 
+
 /* manager section  paragraph styling  */
+
 h5 {
     text-align: center;
     font-size: 18px;
@@ -181,11 +187,13 @@ h5 {
     padding: 0px 200px;
     margin: 30px 0px;
 }
- .manager-heading {
-     position: relative;
-     left: 15px;
- }
- .manager-div {
+
+.manager-heading {
+    position: relative;
+    left: 15px;
+}
+
+.manager-div {
     box-shadow: rgba(216, 216, 216, 0.78) 5px 10px 10px 0px;
     margin: 10px 51px;
 }
@@ -205,7 +213,7 @@ h5 {
 }
 
 .manager-team {
-    margin-top: 20% ;
+    margin-top: 20%;
     width: 100%;
     height: 70%;
 }
@@ -223,7 +231,9 @@ h5 {
     text-transform: uppercase;
 }
 
+
 /* gallery section  */
+
 .gallery {
     margin: 100px 0px;
     align-items: center;
@@ -251,28 +261,36 @@ h5 {
     padding: 0px 20px;
 }
 
+
 /* testimonials section styling  */
+
 .testimonials {
     align-items: center;
 }
 
-.img-te1, .img-te2,
-.img-te3, .img-te4 {
+.img-te1,
+.img-te2,
+.img-te3,
+.img-te4 {
     position: relative;
     left: 96px;
     border-radius: 50%;
 }
 
-.img-te1-name,.img-te2-name,
-.img-te3-name,.img-te4-name  {
+.img-te1-name,
+.img-te2-name,
+.img-te3-name,
+.img-te4-name {
     margin-top: 20px;
     font-size: 20px;
     font-weight: 500;
-    color: rgba(8,169,255,0.9640231092436975);
+    color: rgba(8, 169, 255, 0.9640231092436975);
 }
+
 .testimonials-msg {
     padding: 0px 50px;
 }
+
 
 /* map  */
 
@@ -280,6 +298,7 @@ h5 {
     margin-top: 30px;
     margin-bottom: 30px;
 }
+
 .map-img {
     margin-left: 50px;
     position: relative;
@@ -287,30 +306,26 @@ h5 {
     width: 80%;
 }
 
-
 @media only screen and (max-width: 600px) {
-
     body {
         width: 100%;
         padding: 0;
         margin: 0;
         box-sizing: border-box;
     }
-
     /* home-banner  */
     .home-banner {
         background-position: center;
         background-size: cover;
     }
     /* map image  */
-
     .map-img {
         width: 100%;
         margin-left: 0px;
         position: none;
         left: 0px;
         top: 0px;
-    }        
+    }
     /* choose what's right for you section */
     .choose-wrfy-header {
         font-size: 20px;
@@ -323,23 +338,19 @@ h5 {
         padding: 0px;
         margin-bottom: 50px;
     }
-
     /* .manager-heading {
         position: relative;
         left: 3px;
     }  */
-
     .manager-div {
         box-shadow: rgba(216, 216, 216, 0.78) 5px 10px 10px 0px;
         margin: 20px 60px;
     }
-
     .manager-para {
         padding-bottom: 2px;
         padding: 0px 30px;
         margin: 10px 0px;
     }
-
     .manager-team {
         min-width: 320px;
         width: 70%;
@@ -349,7 +360,6 @@ h5 {
         margin-left: 100px;
         padding: 0;
     }
-
     /* gallery  */
     .gallery {
         position: relative;
@@ -358,52 +368,45 @@ h5 {
         margin-left: 18px;
         padding: 0;
     }
-
     .gallery-section_1 {
         position: relative;
         left: 20px;
     }
-
     /* testimonials  */
     .testimonials-msg {
         position: relative;
         margin-left: -10px;
     }
-
-    
-    .img-te1, .img-te2, .img-te3 {
-    position: relative;
-    margin-left: 100px;
-    left: 89px;
-    border-radius: 50%;
+    .img-te1,
+    .img-te2,
+    .img-te3 {
+        position: relative;
+        margin-left: 100px;
+        left: 89px;
+        border-radius: 50%;
     }
-
     .img-te4 {
         position: relative;
         margin-left: 80px;
         width: 31%;
     }
-
     /* style css class  */
     #unltd-comm-header {
         font-size: 20px;
     }
-
     #unltd-comm-body {
         font-size: 18px;
     }
-/* unlimited commission-free online trade  */
+    /* unlimited commission-free online trade  */
     #unltd-comm-body {
         font-size: 15px;
         padding: 0px 20px;
         margin: 0px 3px;
     }
-
-    #start-0-investing > img {
+    #start-0-investing>img {
         width: 100%;
         margin-left: 10px;
     }
-
     .unltd-comm-btn {
         margin-left: 40px;
         position: relative;
@@ -411,29 +414,51 @@ h5 {
     }
 }
 
-@media only screen and (min-width: 320px) {
+@media screen and (max-width: 500px) {
+    #create-account-banner>h3 {
+        /* margin-top: 5rem; */
+        font-weight: bold;
+        position: relative;
+        left: 70px;
+        color: #6d9;
+        display: none;
+    }
+    #create-account-banner>p {
+        font-size: 21px;
+        color: #656;
+    }
+    .sidenav {
+        z-index: 4;
+    }
+    .navigation {
+        position: sticky;
+        z-index: 0;
+    }
+}
+
+@media screen and (min-width: 320px) {
     /* manager  */
     .manager-team {
         min-width: 320px;
+        position: relative;
+        right: 12px;
     }
-
     .sign-img {
         margin-left: 25px;
     }
-
-    .img-te1, .img-te2, .img-te3 {
+    .img-te1,
+    .img-te2,
+    .img-te3 {
         position: relative;
         margin-left: 0px;
         left: 85px;
         border-radius: 50%;
     }
-
     .img-te4 {
         position: relative;
         margin-left: -18px;
         width: 50%;
     }
-
     /* .map-img {
         width: 60%
     } */
